# backend/config/swagger.json
@@ -10,26 +10,25 @@
   "schemes": [
     "http"
   ],
-  "tags":[
-    {
-      "name":"Auth",
-      "description":"Authenticate User"
+  "tags": [{
+      "name": "Auth",
+      "description": "Authenticate User"
     },
     {
-      "name":"User",
-      "description":"User Operation"
+      "name": "User",
+      "description": "User Operation"
     },
     {
-      "name":"Contest",
-      "description":"Contest Services"
+      "name": "Contest",
+      "description": "Contest Services"
     },
     {
-      "name":"Transaction",
-      "description":"Transaction Services"
+      "name": "Transaction",
+      "description": "Transaction Services"
     },
     {
-      "name":"Portfolio",
-      "description":"Portfolio Services"
+      "name": "Portfolio",
+      "description": "Portfolio Services"
     }
   ],
   "paths": {
@@ -56,11 +55,11 @@
             "properties": {
               "email": {
                 "type": "string",
-                "example":"nabilaelazri@student.ub.ac.id"
+                "example": "nabilaelazri@student.ub.ac.id"
               },
               "password": {
                 "type": "string",
-                "example":"kakadamgantengbanget"
+                "example": "kakadamgantengbanget"
               }
             }
           }
@@ -95,7 +94,7 @@
           "in": "body",
           "name": "user",
           "description": "register a new user email must be valid and password minimum 8",
-          "required":"true",
+          "required": "true",
           "schema": {
             "type": "object",
             "required": [
@@ -107,19 +106,19 @@
             "properties": {
               "nama": {
                 "type": "string",
-                "example":"Adam"
+                "example": "Adam"
               },
               "email": {
                 "type": "string",
-                "example":"graha.asa@gmail.com"
+                "example": "graha.asa@gmail.com"
               },
               "password": {
                 "type": "string",
-                "example":"g@md1234"
+                "example": "g@md1234"
               },
               "phone_number": {
                 "type": "string",
-                "example":"0874562157"
+                "example": "0874562157"
               }
             }
           }
@@ -148,35 +147,36 @@
           "application/json"
         ],
         "parameters": [{
-          "in": "body",
-          "name": "user",
-          "description": "Change user password, and password must be valid 8 char long",
-          "required":"true",
-          "schema": {
-            "type": "object",
-            "required": [
-              "newPassword",
-              "oldPassword"
-            ],
-            "properties": {
-              "newPassword": {
-                "type": "string",
-                "example":"password1234"
-              },
-              "oldPassword": {
-                "type": "string",
-                "example":"password4321"
+            "in": "body",
+            "name": "user",
+            "description": "Change user password, and password must be valid 8 char long",
+            "required": "true",
+            "schema": {
+              "type": "object",
+              "required": [
+                "newPassword",
+                "oldPassword"
+              ],
+              "properties": {
+                "newPassword": {
+                  "type": "string",
+                  "example": "password1234"
+                },
+                "oldPassword": {
+                  "type": "string",
+                  "example": "password4321"
+                }
               }
             }
+          },
+          {
+            "name": "userId",
+            "in": "query",
+            "description": "user's id that want to password to be change",
+            "required": true,
+            "type": "string"
           }
-        },
-      {
-          "name":"userId",
-          "in":"query",
-          "description":"user's id that want to password to be change",
-          "required":true,
-          "type":"string"
-      }],
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -187,11 +187,11 @@
           "406": {
             "description": "Password invalid "
           },
-          "412":{
-            "description":"Password not provided/params user id not provided"
+          "412": {
+            "description": "Password not provided/params user id not provided"
           },
-          "404":{
-            "description":"body not found/params user id not provided"
+          "404": {
+            "description": "body not found/params user id not provided"
           }
         }
       }
